# personal-hub

./: .gitignore  LICENSE  README.md  build.bat  build.py  exclude-defender.bat  pyproject.toml  run-dev.bat
backend/: main.py  models.py
backend/routers/: cron_dashboard.py  dashboard.py  linkcard.py  settings.py  telegram_digest.py  telegram_files.py  tweetgen.py  wiki.py
backend/services/: config.py  cron_scheduler.py  email_sender.py  linkcard.py  telegram_digest.py  telegram_files.py  tweetgen.py  wiki.py
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/components/: CronDashboardView.vue  DashboardView.vue  LinkCardView.vue  SettingsPanel.vue  Sidebar.vue  TelegramDigestView.vue  TelegramFilesView.vue  TweetGenView.vue  WikiView.vue
frontend/src/composables/: useApi.js
frontend/src/styles/: main.css
wiki/: docker.md  github.md
